--- a/src/Components/CaruselOfetas/CaruselOfetas.css
+++ b/src/Components/CaruselOfetas/CaruselOfetas.css
@@ -1,19 +1,19 @@
+.swiper2 {
+  width: 300px;
+  height: 300px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -150px;
+  margin-top: -150px;
+}
 
-.swiper {
-    width: 100%;
-    /* padding-top: 20px; */
-    padding-bottom: 100px;
-  }
-  
-  .swiper-slide {
-    background-position: center;
-    background-size: cover;
-    width: 300px;
-    height: 300px;
-  }
-  
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-  }
-  
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+}
