--- a/src/Components/CaruselOfetas/CaruselOfetas.css
+++ b/src/Components/CaruselOfetas/CaruselOfetas.css
@@ -1,12 +1,7 @@
-.swiper2 {
+.mySwiper2 {
   width: 300px;
-  height: 300px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  margin-left: -150px;
-  margin-top: -150px;
-}
+  height: 480px;
+} 
 
 .swiper-slide {
   background-position: center;
@@ -14,6 +9,8 @@
 }
 
 .swiper-slide img {
-  display: block;
-  width: 100%;
+    width: 100%;
+}
+#Navigation{
+  color: black;
 }
